# sectool-agents

./: .gitignore  LICENSE  README.md
.github/: dependabot.yml
claude-controller/: README.md  __init__.py  config.py  controller.py  findings.py  pyproject.toml  requirements.txt  tools.py
claude-controller/prompts/: orchestrator_director.py  orchestrator_verifier.py  worker.py
claude-controller/tests/: conftest.py  test_controller_loop.py  test_findings.py  test_tools.py
